fix awkward header padding on mobile.

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -5,7 +5,7 @@
   padding-top: rhythm(3)
 
   @media (max-width: $breakpoint)
-    padding-top: rhythm(1)
+    padding-top: rhythm(2)
 
   &:after
     color: $color-grey
